--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,7 +1,9 @@
 {
   "cSpell.words": [
+    "apexcharts",
     "dashgo",
-    "unstyled"
+    "unstyled",
+    "xaxis"
   ],
   "editor.fontSize": 14,
   "editor.rulers": [
