--- a/package.json
+++ b/package.json
@@ -14,10 +14,12 @@
     "@emotion/core": "^11.0.0",
     "@emotion/react": "^11.4.0",
     "@emotion/styled": "^11.3.0",
+    "apexcharts": "^3.27.3",
     "emotion-theming": "^11.0.0",
     "framer-motion": "^4.1.17",
     "next": "11.0.1",
     "react": "17.0.2",
+    "react-apexcharts": "^1.3.9",
     "react-dom": "17.0.2",
     "react-icons": "^4.2.0"
   },
