--- a/package.json
+++ b/package.json
@@ -18,15 +18,18 @@
     "apexcharts": "^3.27.3",
     "emotion-theming": "^11.0.0",
     "framer-motion": "^4.1.17",
+    "miragejs": "^0.1.41",
     "next": "11.0.1",
     "react": "17.0.2",
     "react-apexcharts": "^1.3.9",
     "react-dom": "17.0.2",
     "react-hook-form": "^7.12.1",
     "react-icons": "^4.2.0",
+    "react-query": "^3.19.1",
     "yup": "^0.32.9"
   },
   "devDependencies": {
+    "@types/faker": "^5.5.7",
     "@types/node": "^16.4.4",
     "@types/react": "^17.0.15",
     "@typescript-eslint/eslint-plugin": "^4.28.5",
@@ -41,6 +44,7 @@
     "eslint-plugin-import-helpers": "^1.1.0",
     "eslint-plugin-prettier": "^3.4.0",
     "eslint-plugin-react": "^7.24.0",
+    "faker": "^5.5.3",
     "prettier": "^2.3.2",
     "tsconfig-paths": "^3.10.1",
     "typescript": "^4.3.5"
