Adding More Paths to Path Mapping

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -80,8 +80,16 @@
             "./src/components"
           ],
           [
+            "@dashgo/contexts",
+            "./src/contexts"
+          ],
+          [
             "@dashgo/pages",
             "./src/pages"
+          ],
+          [
+            "@dashgo/services",
+            "./src/services"
           ],
           [
             "@dashgo/styles",
